<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/date_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:contentPadding="2dp"
        app:cardBackgroundColor="@color/grey_green"
        android:layout_gravity="center_horizontal"
        app:cardElevation="0dp"
        android:layout_marginVertical="16dp">
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_november_2022"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:padding="2dp"
            android:background="@color/grey_green"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sender"
        style="@style/Sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">
        <RelativeLayout
            style="@style/Sender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:text="@string/hi_my_name_is_lisa"
                android:maxWidth="200dp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:layout_marginTop="-8dp"
                android:layout_toEndOf="@id/text"
                android:text="@string/_21_02"
                android:textSize="11sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/receiver"
        style="@style/Receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">
        <RelativeLayout
            style="@style/Receiver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/hi_my_name_is_lisa"
                android:textColor="@color/black"
                android:maxWidth="200dp"/>
            <TextView
                android:id="@+id/time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:text="@string/_21_02"
                android:layout_below="@id/text2"
                android:textSize="11sp"
                android:layout_toEndOf="@id/text2"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>